--- a/BloggingPlatform/src/main/resources/application.properties
+++ b/BloggingPlatform/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:mysql\://localhost\:3306/BloggingPlatform?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true}
-spring.datasource.username=${JDBC_DATABASE_USERNAME\:root}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD\:66527}
+spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:mysql\://3.110.190.145\:3306/BloggingPlatform?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true}
+spring.datasource.username=${JDBC_DATABASE_USERNAME\:omi}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD\:1234}
 spring.datasource.dbcp2.max-wait-millis=30000
 spring.datasource.dbcp2.validation-query=/* ping */ select 1
 spring.datasource.dbcp2.validation-query-timeout=30
