--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,14 +4,14 @@
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
-# documentation
+# documentation.
 
 name: Java CI with Maven
 
 on:
   push:
     branches: [ "master" ]
-
+ 
 
 jobs:
   build:
@@ -27,8 +27,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file ./BloggingPlatform/pom.xml
-    - name: Execute Jar file
-      run: sudo kill -9 `sudo lsof -t -i:8080` &  sudo java -jar /home/ubuntu/actions-runner/_work/BlogPost/BlogPost/BloggingPlatform/target/BloggingPlatform-0.0.1-SNAPSHOT.jar &
+      run: mvn -B package --file pom.xml
 
   
