--- a/BloggingPlatform/src/main/resources/application.properties
+++ b/BloggingPlatform/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:mysql\://3.110.190.145\:3306/BloggingPlatform?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true}
+spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:mysql\://3.110.190.145\:3306/BloggingPlatform?serverTimezone\=UTC}
 spring.datasource.username=${JDBC_DATABASE_USERNAME\:omi}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD\:1234}
 spring.datasource.dbcp2.max-wait-millis=30000
